bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value indic
while(indic != "") {
      ^BDR:3: error: not found: value indic
  indic = readMessage()
  ^BDR:4: error: not found: value indic
  if(indic == "R"){
     ^BDR:8: error: not found: value indic
  else if(indic == "L"){
          ^BDR:12: error: not found: value indic
  else if(indic == "I"){
          ^BDR:17: error: not found: value indic
  else if(indic =="A"){
          ^BDR:20: error: not found: value indic
  else if(indic == "B"){
          ^BDR:24: error: not found: value indic
  else if(indic == "C"){
          ^BDR:29: error: not found: value indic
  else if(indic == "Z"){
          ^BDR:32: error: not found: value indic
  else if(indic == "X"){
          ^BDR:36: error: not found: value indic
  else if(indic == "Y"){
          ^